--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="" routerLinkActive="active">Link 1</a>
       <a mat-list-item routerLink="/regionSecteur"> region secteur</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="/upload">Upload</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
